css/responsive.css
@media only screen and (max-width: 1200px) {
  #header {
    height: 400px;
    z-index: -1;
  }
}
@media only screen and (max-width: 768px) {
  #header {
    height: 300px;
  }
  .junior-text {
    font-size: small;
    line-height: 14px;
  }
  .project {
    width: 70px;
    height: 70px;
  }

  .email_text {
    margin-left: 0;
    height: 450px !important;
    width: 100% !important;
  }
  .text_email {
    padding-top: 2%;
  }
  .subject {
    padding-top: 2.5% !important;
  }
  .dots {
    display: none;
  }
  .trait {
    width: 100%;
    margin-top: 20px;
    height: 60px;
  }
  .trait img {
    width: 20px;
  }
  .intro {
    height: 70%;
  }
  .intro img {
    width: 250px;
  }
}
@media only screen and (max-width: 992px) {
  .email_text {
    height: 430px;
    width: 85%;
  }
  .text_email {
    width: 90%;
  }
  #about_me {
    height: 500px !important;
  }
  .to {
    padding-left: 1.5%;
    padding-top: 5.5%;
  }
  .subject {
    padding-left: 5.5%;
    padding-top: 3.1%;
  }
  .project {
    width: 200px;
    height: 200px;
  }
  #email_form {
    height: 400px;
  }
  #email_form img {
    display: none !important;
  }
  .mail-form {
    margin: 0;
    display: inline-block;
    width: 100%;
  }
}
/* @media only screen and (max-width: ) {
  } */
@media only screen and (max-width: 576px) {
  .navbar-brand {
    font-size: medium;
  }
  .intro img {
    height: 180px;
    width: 220px;
  }
  #traits {
    margin-top: -50px;
  }
  .email_text {
    height: 420px !important;
    background-size: 700px;
    background-position: top left;
  }
  .text_email {
    padding-top: 2%;
    font-size: 14px;
    width: 90%;
  }
  .to {
    padding-left: 30px;
  }
  .subject {
    padding-top: 5% !important;
    padding-left: 10%;
  }
  .skills_text {
    font-size: 50px;
  }
  .skills {
    width: 100%;
  }
  .projects_text {
    background-size: 170px;
    background-position-y: 50px;

    font-size: 50px;
  }
  .project {
    width: 100%;
    height: 130px;
    margin-bottom: 15px;
  }
  #projects {
    margin-bottom: 20px;
  }
  .bg_circles {
    display: none;
  }
}

